# ed-core

./: Dockerfile  MANIFEST.in  Makefile  delivery_jobs.json  order_res.json  orders.json  package.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
email_templates/: delivery_business_otp.html  delivery_completed.html  delivery_consumer_otp.html  order_placed.html  pick_up_completed.html
src/: package.py
src/application/contracts/infrastructure/persistence/: __init__.py  abc_bill_repository.py  abc_business_repository.py  (+8 more)
src/common/: generic_helpers.py
src/common/typing/: config.py
src/ed_core/application/services/: __init__.py  abc_service.py  api_key_service.py  bill_service.py  business_service.py  car_service.py  consumer_service.py  delivery_job_service.py  driver_payment_service.py  driver_service.py  location_service.py  order_service.py  otp_service.py  parcel_service.py  waypoint_service.py
src/ed_core/documentation/: abc_core_api_client.py  core_api_client.py  endpoints.py
src/ed_core/documentation/api/: abc_core_api_client.py  core_api_client.py  core_endpoint_descriptions.py
src/ed_core/infrastructure/api/: api_handler.py  rabbitmq_handler.py
src/ed_core/infrastructure/files/: image_uploader.py
src/ed_core/webapi/: dependency_setup.py
src/ed_core/webapi/controllers/: admin_controller.py  api_key_controller.py  business_controller.py  consumer_controller.py  delivery_job_controller.py  delivery_job_rabbitmq_controller.py  driver_controller.py
src/ed_core/webapi/dependency_setup/: dependency_functions.py
src/infrastructure/files/: image_uploader.py
src/infrastructure/persistence/: unit_of_work.py
src/infrastructure/persistence/repositories/: __init__.py  bill_repository.py  business_repository.py  car_repository.py  consumer_repository.py  delivery_job_repository.py  driver_repository.py  generic_repository.py  location_repository.py  order_repository.py  route_repository.py
src/infrastructure/rabbitmq/: producer.py  subscriber.py
src/webapi/: api.py  dependency_setup.py
src/webapi/controllers/: business_controller.py  delivery_job_controller.py  driver_controller.py  order_controller.py
(+121 files in other folders)
