[tool.poetry]
name = "ed-core"
version = "0.2.18"
description = ""
authors = ["ffekirnew <ffekirnew0808@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
fastapi = {extras = ["standard"], version = "^0.115.5"}
websockets = "^14.1"
rmediator = "^0.2.3"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"
jsons = "^1.6.3"
cloudinary = "^1.42.2"
python-multipart = "^0.0.20"
ed-domain = "^0.3.7"
twine = "^6.1.0"
ed-infrastructure = "^0.1.15"
ed-auth = "^0.1.9"
ed-notification = "^0.1.8"


[tool.poetry.group.test.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
ruff = "^0.8.2"
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"
